cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

add_executable(longest-common-prefix longest-common-prefix/longest-common-prefix.cpp)
add_executable(merge-k-sorted-lists merge-k-sorted-lists/merge-k-sorted-lists.cpp)
add_executable(mypowx-n mypowx-n/mypowx-n.cpp)
add_executable(palindrome-number palindrome-number/palindrome-number.cpp)
add_executable(reverse-integer reverse-integer/reverse-integer.cpp)
add_executable(two-sum two-sum/two-sum.cpp)
add_executable(first-missing-positive first-missing-positive/first-missing-positive.cpp)
add_executable(group-anagrams group-anagrams/group-anagrams.cpp)
